[package]
name = "fractal_viewer"
version = "2.1.0"
edition = "2021"
description = "Cross-platform GPU-accelerated viewer for the Mandelbrot set and related fractals"
repository = "https://github.com/arthomnix/fractal_viewer"
license = "MIT"

[[bin]]
name = "fractal_viewer_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.28", default-features = false, features = [ "wgpu", "accesskit", "default_fonts", "wayland", "web_screen_reader" ] }
egui-wgpu = "0.28"
log = "0.4"
env_logger = "0.11"
bytemuck = { version = "1.16", features = [ "derive" ] }
bincode = "1.3"
serde = { version = "1.0", features = [ "derive"] }
base64 = "0.22"
url = "2.5"
instant = { version = "0.1", features = [ "wasm-bindgen" ] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = { version = "3.4", features = [ "wayland-data-control" ] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = { version = "1.0", features = [ "color" ] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [ "Window", "Location", "Document", "Element" ] }
naga = "0.20"